<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>net.rejmi</groupId>
	<artifactId>pdfshow</artifactId>
	<version>1.0.4</version>	<!-- DRY? Keep mkinstaller and 'ver' in README at same x.y.z level -->
	<packaging>jar</packaging>
	<inceptionYear>2019</inceptionYear>

	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/IanDarwin/pdfshow/issues</url>
	</issueManagement>

	<name>pdfshow</name>
	<description>
		pdfshow
	</description>
	<url>http://darwinsys.com/</url>
	<licenses>
		<license>
		<name>BSD 2-Clause "New" or "Revised" license</name>
		<url>http://opensource.org/licenses/BSD-2-Clause</url>
		<distribution>repo</distribution>
		</license>
	</licenses>
	<developers>
		<developer>
		<id>ian</id>
		<name>Ian Darwin</name>
		</developer>
	</developers>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<javase.version>21</javase.version>
		<maven.compiler.source>${javase.version}</maven.compiler.source>
		<maven.compiler.target>${javase.version}</maven.compiler.target>
		<maven.compiler.testSource>${javase.version}</maven.compiler.testSource>
		<maven.compiler.testTarget>${javase.version}</maven.compiler.testTarget>
		<maven.javadoc.failOnError>false</maven.javadoc.failOnError>
		<darwinsys-api-version>1.7.7-SNAPSHOT</darwinsys-api-version>
		<pdfbox-version>2.0.24</pdfbox-version>
	</properties>

	<dependencies>
		<!-- The star of the show! -->
		<dependency>
			<groupId>org.apache.pdfbox</groupId>
			<artifactId>pdfbox</artifactId>
			<version>${pdfbox-version}</version>
		</dependency>

		<!-- My own rather trivial API -->
		<dependency>
			<groupId>com.darwinsys</groupId>
			<artifactId>darwinsys-api</artifactId>
			<version>${darwinsys-api-version}</version>
		</dependency>

		<!-- Update maven plugin for legacy systems -->
		<dependency>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-compiler-plugin</artifactId>
			<version>3.8.1</version>
			<type>maven-plugin</type>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>

		<!-- Put Version Number into About box -->
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
				<includes>
					<include>**/*.properties</include>
				</includes>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>false</filtering>
				<includes>
					<include>**/*</include>
				</includes>
			</resource>
		</resources>

		<plugins>
			<!-- Allow 'mvn exec:java' to run the program -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>1.6.0</version>
				<configuration>
					<mainClass>net.rejmi.pdfshow.Main</mainClass>
						<arguments>
							<!-- Twice, so we can test tabbing easily -->
							<argument>samples/SampleShow.pdf</argument>
							<argument>samples/SampleShow.pdf</argument>
						</arguments>
				</configuration>
			</plugin>

			<!-- Use 'mvn package assembly:single' for runnable jar-with-depends created in 'target' -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.3.0</version>
				<configuration>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
					<archive>
						<manifest>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
							<mainClass>net.rejmi.pdfshow.Main</mainClass>
							<!-- <manifestFile>manifest.stub</manifestFile> -->
						</manifest>
						<manifestEntries>
							<Vendor-URL>http://darwinsys.com/freeware/</Vendor-URL>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>21</source>
					<target>21</target>
					<compilerArgs>--enable-preview</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
